snapserver-core-plugins (1.0.93.2~xenial) xenial; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Fri, 24 Mar 2017 02:01:01 -0700

snapserver-core-plugins (1.0.93.0~xenial) xenial; urgency=high

  * EX-171: SNAP-173: Added a priority so a system revision may still be
    ordered between various plugins.
  * Removed the overwrite exception from revision since now we also need to
    be able to overwrite revision fields.
  * Made updates of output files for test purposes.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 23 Mar 2017 23:36:19 -0800

snapserver-core-plugins (1.0.92.0~xenial) xenial; urgency=high

  * EX-79: Fixed the error message box so it actually fits on a smartphone.
  * Removed the resize from the script since it is not required anymore.
  * Fixed a few $(...) which should have been jQuery(...).

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 23 Mar 2017 18:04:19 -0800

snapserver-core-plugins (1.0.91.0~xenial) xenial; urgency=high

  * EX-79: Fixed the hidden field under the fixed header with a scroll.
  * Fixed the maximum width of a line-edit to 100% so it fits smart phones.
  * Fixed the contact form save button so it is shown as an inline-block.
  * Made the sb-admin-2 script depend on the editor so we can set the height.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 23 Mar 2017 00:50:19 -0800

snapserver-core-plugins (1.0.90.0~xenial) xenial; urgency=high

  * EX-79: Added the copyright_date_range() token so we can easily enter a
    copyright notice with a date range which will change with time.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 22 Mar 2017 21:09:19 -0800

snapserver-core-plugins (1.0.89.0~xenial) xenial; urgency=high

  * EX-79: Added a "focused" class to the snap-editor wrapper <div> tag.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 21 Mar 2017 22:02:19 -0800

snapserver-core-plugins (1.0.88.0~xenial) xenial; urgency=high

  * EX-79: Removed the "hide visible focus" from buttons in forms from the