@@ -1,6 +1,7 @@
 snapserver-core-plugins (1.0.93.2~xenial) xenial; urgency=high
 
-  * Nightly build.
+  * EX-79: Actually made the fixed-box function properly in Snap!
+  * Changed the direct attr() accesses with data() instead.
 
  -- Build Server <build@m2osw.com>  Fri, 24 Mar 2017 02:01:01 -0700
 
